zh-TW：Add missing translation for 'Collab Summit' (#1826)
Add this missing Traditional Chinese for 'Collab Summit'.

--- a/locale/zh-tw/site.json
+++ b/locale/zh-tw/site.json
@@ -106,6 +106,10 @@
       "link": "get-involved/code-and-learn",
       "text": "程式碼與學習"
     },
+    "collab-summit": {
+      "link": "get-involved/collab-summit",
+      "text": "協作者峰會"
+    },
     "contribute": {
       "link": "get-involved/contribute",
       "text": "貢獻"
