doc: Add the missing versions of Nodejs APIs' links (#1865)
1) Missing the v8, v9 links of doc.
2) Fix the site.json in `fa`, add `rtl` and `locale` attributes.

--- a/locale/fa/site.json
+++ b/locale/fa/site.json
@@ -1,8 +1,9 @@
 {
   "title": "Node.js",
   "author": "Node.js Foundation",
-  "url": "https://nodejs.org/en/",
-  "locale": "en",
+  "url": "https://nodejs.org/fa/",
+  "locale": "fa",
+  "rtl": true,
   "scrollToTop": "Scroll to top",
   "reportNodeIssue": "Report Node.js issue",
   "reportWebsiteIssue": "Report website issue",
