--- a/locale/fa/404.md
+++ b/locale/fa/404.md
@@ -3,5 +3,5 @@ layout: page.hbs
 permalink: false
 title: 404
 ---
-## 404: Page could not be found
-### ENOENT: no such file or directory
+## 404: صفحه مورد نظر شما یافت نشد.
+### ENOENT: فایل یا فولدر مورد نظر یافت نشد.
