--- a/locale/fa/site.json
+++ b/locale/fa/site.json
@@ -1,19 +1,19 @@
 {
   "title": "Node.js",
-  "author": "Node.js Foundation",
+  "author": "Node.js بنیاد",
   "url": "https://nodejs.org/fa/",
   "locale": "fa",
   "rtl": true,
-  "scrollToTop": "Scroll to top",
-  "reportNodeIssue": "Report Node.js issue",
-  "reportWebsiteIssue": "Report website issue",
-  "getHelpIssue": "Get Help",
-  "by": "by",
-  "all-downloads": "All download options",
-  "nightly": "Nightly builds",
-  "chakracore-nightly": "Node-ChakraCore Nightly builds",
-  "previous": "Previous",
-  "next": "Next",
+  "scrollToTop": "رفتن به بالا",
+  "reportNodeIssue": "را گزارش کنید Node.js مشکلی در",
+  "reportWebsiteIssue": "مشکلی در وبسایت را گزارش کنید",
+  "getHelpIssue": "کمک بگیرید",
+  "by": "توسط",
+  "all-downloads": "تمام گزینه‌ها برای دانلود",
+  "nightly": "ساخت‌های شبانه",
+  "chakracore-nightly": "ساخت‌های شبانه Node-ChakraCore ",
+  "previous": "قبلی",
+  "next": "بعدی",
   "feeds": [
     {
       "link": "feed/blog.xml",
@@ -33,14 +33,14 @@
   },
   "about": {
     "link": "about",
-    "text": "دربارهٔ...",
+    "text": "درباره",
     "governance": {
       "link": "about/governance",
       "text": "مدیریت"
     },
     "community": {
       "link": "about/community",
-      "text": "اجتماع"
+      "text": "جامعه"
     },
     "workinggroups": {
       "link": "about/working-groups",
@@ -56,7 +56,7 @@
     },
     "trademark": {
       "link": "about/trademark",
-      "text": "نشان بازرگانی"
+      "text": "نشان تجاری"
     },
     "privacy": {
       "link": "about/privacy",
@@ -111,19 +111,19 @@
     "text": "مشارکت جستن",
     "code-and-learn": {
       "link": "get-involved/code-and-learn",
-      "text": "کد + یادگیری"
+      "text": "کد بزنید و یادبگیرید"
     },
     "collab-summit": {
       "link": "get-involved/collab-summit",
-      "text": "Collab Summit"
+      "text": "نشت مشارکت کنندگان"
     },
     "contribute": {
       "link": "get-involved/contribute",
-      "text": "Contribute"
+      "text": "مشارکت"
     },
     "conduct": {
       "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
-      "text": "Code of Conduct"
+      "text": "شیوه تعامل برای مشارکت"
     }
   },
   "security": {
@@ -139,12 +139,12 @@
     "text": "بنیاد"
   },
   "releases": {
-    "title": "تاریخچهٔ انتشارها",
+    "title": "تاریخچه انتشارها",
     "downloads": "Downloads"
   },
   "links": {
     "pages": {
-      "changelog": "Changelog"
+      "changelog": "تغییرات"
     }
   }
 }
