Add Release Schedule
Pulls data from https://github.com/nodejs/Release/pull/380

Fixes: #1889

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -49,6 +49,10 @@
       "link": "about/releases",
       "text": "Releases"
     },
+    "release-schedule": {
+      "link": "about/release-schedule",
+      "text": "Release Schedule"
+    },
     "resources": {
       "link": "about/resources",
       "text": "Resources"
