blog: update 8.13.0 post with arm6 binaries

--- a/locale/en/blog/release/v8.13.0.md
+++ b/locale/en/blog/release/v8.13.0.md
@@ -164,7 +164,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.13.0/node-v8.13.0-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v8.13.0/node-v8.13.0-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v8.13.0/node-v8.13.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v8.13.0/node-v8.13.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.13.0/node-v8.13.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v8.13.0/node-v8.13.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.13.0/node-v8.13.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.13.0/node-v8.13.0.tar.gz<br>
@@ -184,6 +184,8 @@ c4d3ca9d5dd0a1a70d43c15d94a0e5486252bd0640e1d05ad7048e85d25d216d  node-v8.13.0-d
 6a6edf983064dff9f6aec03f7d23fea14051debc1f1c807373eb6df2d6de6f9f  node-v8.13.0-headers.tar.xz
 ef3fe95d79ced4882b7bf2d94cf05186fdf352e752598d94747bcbbe49877ed8  node-v8.13.0-linux-arm64.tar.gz
 e8e0daab515dfd0c2323b8e1274475f61c8ca1cf582dcc254583cbf8593425e3  node-v8.13.0-linux-arm64.tar.xz
+77b8617ef6620e707853aa7eb087f5de2d7f818ba0b6700122a9fe06a9176065  node-v8.13.0-linux-armv6l.tar.gz
+2c27ec5fafb1e2bf75f5aef0d1a33952a29d300d165cb7e875f11cfdd96c0b29  node-v8.13.0-linux-armv6l.tar.xz
 8877505c726aad0d0f85b2f415e88aac5e1afa2f8c198018699620692f7283f0  node-v8.13.0-linux-armv7l.tar.gz
 ded647ea55988c5d5afa6baae05a187518255c0cc96936765ff2676541c79d68  node-v8.13.0-linux-armv7l.tar.xz
 782b34ee2d26a3c621b52d16cad60a07e19c627933704e26fa6b312cdf84a6b0  node-v8.13.0-linux-ppc64le.tar.gz
@@ -217,14 +219,14 @@ b04d7ee6f5e48b40e2f1cc9e2e648ec31ddb97981a32012504d88cd462253f70  win-x86/node.l
 fe1143ebe80932fe55a6f4160935b1a65e0be614280b1c2dbca286afebdf3e46  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAlv0jeAACgkQkzsB9Atc
-qUavuggAoPWziB1O1TUKP08Ho/49rvBYts5BN+1X+i0D+KmRVFhch5WRp+dm9Fff
-g4CHnPqeOywUxLACeFtB355FDnJd/YnQOqQkJ7i/Ek9G8cIFLiQQuC61hm+hIMZv
-7HmC5tpnB5TLiC7BscU7E+SkCevBi5OO3ht2vwAO3tu/78jkphyzq9mj1H/uYVM0
-NOEj1bvkIxJKnfIkEu8aRPB5pp5peQWVrvV/E4TNvpcZLpcX8jDpMeet/Cv8O3I0
-DIAD+ABE0BuR2cH1YZWcL8+KNZukTqCLrnMo23FATf/Hxf5Hivn9nV0cGxV4ul0k
-x9wkbeXkcgkVIQScDfDSoCmS0r7y0w==
-=T027
+iQEzBAEBCAAdFiEEDv/hvO/ZyE49CYFSkzsB9AtcqUYFAlv4JFAACgkQkzsB9Atc
+qUYzUQgAvIg04/iZ2BiZszHfCxc58R3181IRdK2QWlolOLJl1070Yn0t4tAzYxAW
+Ed9lP2flkUQwOGyD3N5/U2x0MWQUKVpjMBq13+KpCuXAqFaRp773lkO5m/Xf+PPV
+/juoKLO09krNaPyOimfjaeSdT8kza5De8WrkaAdjuUQB4/k8LQg0E3UUF8QxwLbo
+URd2ZbM16vD/oUVRiR+WEelG9AorXJbGhLx1x2KActCMHGg+dQJZI9dCuXce5mMK
+7R2PptFFHw4XPx9oSNYLRAJ6CtY0dMWPGhs1wk7E2z5QRJ4Co/rG2/XeCSXzSA7c
+xyMMW3D5tbNjUM0UJECV1mscsE9HkA==
+=eL95
 -----END PGP SIGNATURE-----
 
 ```
