zh-cn: translate guide for consistency (#1928)
Fix: #1927

/cc @nodejs/nodejs-cn

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -98,7 +98,7 @@
     },
     "guides": {
       "link": "docs/guides",
-      "text": "教程"
+      "text": "指南"
     },
     "dependencies": {
       "link": "docs/meta/topics/dependencies",
