--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -78,6 +78,9 @@
       "text": "Signed SHASUMS for release files",
       "verify-link": "https://github.com/nodejs/node#verifying-binaries",
       "verify-text": "How to verify"
+    },
+    "install-on-linux": {
+      "text": "Installing Node.js via binary archive on Linux"
     }
   },
   "docs": {
