allow locale on github links

--- a/locale/es/site.json
+++ b/locale/es/site.json
@@ -1,5 +1,6 @@
 {
   "title": "Node.js",
+  "editOnGithub":"Editar en Github",
   "author": "Fundación de Node.js",
   "url": "https://nodejs.org/es/",
   "locale": "es",
