--- a/locale/es/site.json
+++ b/locale/es/site.json
@@ -79,6 +79,9 @@
       "text": "Firmas SHASUMS de los archivos de versiones",
       "verify-link": "https://github.com/nodejs/node#verifying-binaries",
       "verify-text": "Cómo verificarlo"
+    },
+    "install-on-linux": {
+      "text": "Installing Node.js via binary archive on Linux"
     }
   },
   "docs": {
