--- a/locale/it/site.json
+++ b/locale/it/site.json
@@ -63,6 +63,9 @@
     "package-manager": {
       "link": "download/package-manager",
       "text": "Installa Node.js con un gestore di pacchetti"
+    },
+    "install-on-linux": {
+      "text": "Installing Node.js via binary archive on Linux"
     }
   },
   "docs": {
