--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -77,6 +77,9 @@
     "shasums": {
       "link": "SHASUMS256.txt.asc",
       "text": "وتائق الاصدارات مختومة SHASUMS"
+    },
+    "install-on-linux": {
+      "text": "Installing Node.js via binary archive on Linux"
     }
   },
   "docs": {
