--- a/locale/fa/site.json
+++ b/locale/fa/site.json
@@ -79,6 +79,9 @@
       "text": "Signed SHASUMS for release files",
       "verify-link": "https://github.com/nodejs/node#verifying-binaries",
       "verify-text": "چگونه راستی‌آزمایی کنیم؟"
+    },
+    "install-on-linux": {
+      "text": "Installing Node.js via binary archive on Linux"
     }
   },
   "docs": {
