--- a/locale/gl/site.json
+++ b/locale/gl/site.json
@@ -72,6 +72,9 @@
     "shasums": {
       "link": "SHASUMS256.txt.asc",
       "text": "Firmas SHASUMS para os arquivos de versións"
+    },
+    "install-on-linux": {
+      "text": "Installing Node.js via binary archive on Linux"
     }
   },
   "docs": {
