zh-CN: Trans for 'editOnGitHub' (#1942)
Just like https://github.com/nodejs/nodejs.org/commit/40c84ac0d6dbb04ff4e0787135e4efbf837cd431#diff-c73a453a788f6d072e426628a94d129f. We should add this for Chinese version in both Tranditional and Simplified one.

--- a/locale/zh-tw/site.json
+++ b/locale/zh-tw/site.json
@@ -1,5 +1,6 @@
 {
   "title": "Node.js",
+  "editOnGithub":"在 GitHub 上編輯",
   "author": "Node.js 基金會",
   "url": "https://nodejs.org/zh-tw/",
   "locale": "zh-tw",
