--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -1,5 +1,6 @@
 {
   "title": "Node.js",
+  "editOnGithub":"在 GitHub 上编辑",
   "author": "Node.js 基金会",
   "url": "https://nodejs.org/zh-cn/",
   "locale": "zh-cn",
