ja: Trans for 'editOnGitHub' (#1944)

--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -1,5 +1,6 @@
 {
   "title": "Node.js",
+  "editOnGithub":"GitHub 上で編集",
   "author": "Node.js 財団",
   "url": "https://nodejs.org/ja/",
   "locale": "ja",
