--- a/locale/pt-br/site.json
+++ b/locale/pt-br/site.json
@@ -35,7 +35,7 @@
     "text": "Sobre",
     "governance": {
       "link": "about/governance",
-      "text": "Projeto Governance"
+      "text": "Governança do Projeto"
     },
     "community": {
       "link": "about/community",
