add entry for node-meetups

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -126,6 +126,10 @@
     "conduct": {
       "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
       "text": "Code of Conduct"
+    },
+    "node-meetups": {
+      "link": "get-involved/node-meetups",
+      "text": "Node Meetups"
     }
   },
   "security": {
