zh-TW: New Translations for three new nodes in 'site.json' (#2042)
1. New translations for 'node-meetsup','node-speakers' and 'install-on-linux'.
2. Change the translation from '聚会' to '开发者大会' in zh-CN.

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -130,7 +130,7 @@
     },
     "node-meetups": {
       "link": "get-involved/node-meetups",
-      "text": "Node.js 聚会"
+      "text": "Node.js 开发者大会"
     },
     "node-speakers": {
       "link": "get-involved/node-speakers",
