feat(events): create new page for events (#2047)
* feat(events): create new page for events

* fix: update site links

* fix: malformed json

* fix: extranous ,

* Update locale/en/get-involved/node-events.md

Co-Authored-By: lirantal <liran.tal@gmail.com>

* Update locale/en/get-involved/node-events.md

Co-Authored-By: lirantal <liran.tal@gmail.com>

* Update locale/en/get-involved/node-events.md

Co-Authored-By: lirantal <liran.tal@gmail.com>

* zh-CN：add related node to the `site.json`.

Add related node to the `site.json` and translate it into Chinese.

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -131,6 +131,10 @@
       "link": "get-involved/node-meetups",
       "text": "Node.js Meetups"
     },
+    "node-events": {
+      "link": "get-involved/node-events",
+      "text": "Node.js Events"
+    },
     "node-speakers": {
       "link": "get-involved/node-speakers",
       "text": "Local Node.js Speakers"
