chore: node => Node.js & remove `local` for consistency (#2068)
Before:
![screen shot 2019-02-13 at 3 40 19 pm](https://user-images.githubusercontent.com/23313266/52694820-e6373d80-2fa5-11e9-8ef9-6a3b32bd4c32.png)

After:
![screen shot 2019-02-13 at 3 40 26 pm](https://user-images.githubusercontent.com/23313266/52694844-f94a0d80-2fa5-11e9-88b8-6d692f557210.png)

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -137,7 +137,7 @@
     },
     "node-speakers": {
       "link": "get-involved/node-speakers",
-      "text": "Local Node.js Speakers"
+      "text": "Node.js Speakers"
     }
   },
   "security": {
