--- a/locale/ko/site.json
+++ b/locale/ko/site.json
@@ -133,7 +133,7 @@
     },
     "node-speakers": {
       "link": "get-involved/node-speakers",
-      "text": "지역 Node.js 강연자"
+      "text": "Node.js 강연자"
     }
   },
   "security": {
