--- a/locale/zh-tw/site.json
+++ b/locale/zh-tw/site.json
@@ -128,7 +128,7 @@
     },
     "node-speakers": {
       "link": "get-involved/node-speakers",
-      "text": "本地 Node.js 演講者"
+      "text": "Node.js 演講者"
     }
   },
   "security": {
