--- a/locale/it/404.md
+++ b/locale/it/404.md
@@ -4,4 +4,4 @@ permalink: false
 title: 404
 ---
 ## 404: La pagina non è stata trovata
-### ENOENT: Nessun file o cartella con questo nome
+### ENOENT: Nessun file o cartella presente con questo nome
