blog: update v8.15.1 and v6.17.0 release posts with armv6 binaries

--- a/locale/en/blog/release/v6.17.0.md
+++ b/locale/en/blog/release/v6.17.0.md
@@ -51,7 +51,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v6.17.0/node-v6.17.0-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v6.17.0/node-v6.17.0-aix-ppc64.tar.gz<br>
 SmartOS 32-bit Binary: https://nodejs.org/dist/v6.17.0/node-v6.17.0-sunos-x86.tar.xz<br>
 SmartOS 64-bit Binary: https://nodejs.org/dist/v6.17.0/node-v6.17.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v6.17.0/node-v6.17.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v6.17.0/node-v6.17.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v6.17.0/node-v6.17.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v6.17.0/node-v6.17.0.tar.gz<br>
@@ -71,6 +71,8 @@ a1051c5529511b343acfc9cfb02515b7cd40e820fec571cff70d9afd4c48435e  node-v6.17.0-h
 b53e3886514be3674125617caf5c761b849f197f0b64aeabb2821b2de30a241c  node-v6.17.0-headers.tar.xz
 443f7656c541ba66b4aa50a5fa81e34e38714851006194ed63fee9cf48936c73  node-v6.17.0-linux-arm64.tar.gz
 427f6c0ad02d2ad8e203a2c4959fadeaaa6043ba8caf2e1978c4a4d5b38737ab  node-v6.17.0-linux-arm64.tar.xz
+40b3791472e581e7caa6f0d19cfe01d94654b7d0f2300302376f071f8fef468c  node-v6.17.0-linux-armv6l.tar.gz
+94b8cac4800b7a0000548b69d38421398d222ee939a94af4add4a56369ba1158  node-v6.17.0-linux-armv6l.tar.xz
 ad3ea3925fb4d74c2d7d3fa7b23d48b97b01846e31ac6bf0a70ab6f2eaa67f65  node-v6.17.0-linux-armv7l.tar.gz
 a3fea75b0b052327a8f7b1042b794d797a54b7f39280194037f82b78e8624570  node-v6.17.0-linux-armv7l.tar.xz
 2a959dd29f8a0fe52bbe3a0e287dfe306fb6ed4a90d4bb61b3bf856ec11d4c33  node-v6.17.0-linux-ppc64le.tar.gz
@@ -106,14 +108,13 @@ c25956040e9b7717976d61896cfdadaa56dfee26a6066a83b3f4dc566a99ccf0  win-x64/node_p
 c3f05efcf553c326e644c079efbbacffe704012109584527a052ae6dab04a610  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEzBAEBCAAdFiEE3Y8jOLrnUB491ax4wnN5L32DVF0FAlx3184ACgkQwnN5L32D
-VF3GuQf/dhKjhCsjpcFY31DvpZgGxO8QqGtpwzTKWTrGN0Egc1r8ayhSFeaDl8+1
-AXvGVNbvw09MfH3pv7f1uS3St8ihTri0KHD0DehUr7mfyJIWbQ4D3LPv9/g+r6cp
-ww7/JfvW8l0Wb/V1H5wxnPaWLPp9PK8MwxSJzfuVF05nOPmaSSbzUiDoJIDbpGwz
-GO+QqtlX4bwPBG53a5H6L/ThrBWx7FQ/Ejux+9gbm8KBcek3riszW8YhWN5yP0tc
-oXZJ+7cQ/UvCOWUlLjHMOz/h7XKpJ+PqHh4b+W36w0ugCCR7rmlyGBgtIr83Koi7
-kntnIFGGCrcLCvuUw08ZT5NO5wzeJg==
-=pu/s
+iQEzBAEBCAAdFiEE3Y8jOLrnUB491ax4wnN5L32DVF0FAlx44SAACgkQwnN5L32D
+VF2X6gf+NxTSCd/RtjL+tBbJAeNBHg4/s8nn9kngEgq+q/ybbABub06BhnyoZUeZ
+U6JKXM79586vKi0EV9whiVWGDGcenRNBHIwWcbHMFtsl0QrDiz6UdXvWniNN43cL
++Vx7Tmqil2J641UaicEM8h8A0xG60YNEOcWXMzLIuVF21mF+9qcvPKMSR0jDYy+6
+CXJqerft43JpRR9AeN9Ol3kgiwA8mZ0tQRS7vPgjKCIcHfCz6hHEYSqWLcOuqAFN
+eotHEXfLmXgprcqz/Z7It3pUPramtLYXMqM7PEX810hBWbGb3g0+MSD92stz2BLU
+1B4cp5rS5mia2iaAbrw/bcPbdQVHbQ==
+=bIfA
 -----END PGP SIGNATURE-----
-
 ```
