--- a/locale/en/blog/release/v8.15.1.md
+++ b/locale/en/blog/release/v8.15.1.md
@@ -43,7 +43,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.15.1/node-v8.15.1-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v8.15.1/node-v8.15.1-aix-ppc64.tar.gz<br>
 SmartOS 32-bit Binary: https://nodejs.org/dist/v8.15.1/node-v8.15.1-sunos-x86.tar.xz<br>
 SmartOS 64-bit Binary: https://nodejs.org/dist/v8.15.1/node-v8.15.1-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.15.1/node-v8.15.1-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v8.15.1/node-v8.15.1-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.15.1/node-v8.15.1-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.15.1/node-v8.15.1.tar.gz<br>
@@ -63,6 +63,8 @@ aacdc9d5d8bbeaf47c398815147e052aac53cf19319f4c140c1798a82d419e65  node-v8.15.1-d
 6729d58fad4960259ea5233a87ef913e07b7a5118d4c6e3fecc4b3595c817345  node-v8.15.1-headers.tar.xz
 0fcb30bc508097c0a13e7001a55f410802eda155c070cd5d125cd321332cc9f1  node-v8.15.1-linux-arm64.tar.gz
 69e000d78342c3d39583922c57947a906ad723789d6294951deb10cbe8709605  node-v8.15.1-linux-arm64.tar.xz
+a4b0ca0cd8b21224f676f05f6b4760d368935eed21e8ab96ceedb454e70770b4  node-v8.15.1-linux-armv6l.tar.gz
+2bca1485fdbfd2a905d28409450b512eeaeb020ea50b5027d697f15e70bffa95  node-v8.15.1-linux-armv6l.tar.xz
 e1fded2ef39967deef4f6a6921f86a66092c4bda1e9d207126fc7676797de98a  node-v8.15.1-linux-armv7l.tar.gz
 4be3cbf3bd0d0f30c8c2a3a4396fa1b78e6c5defc21dc176bf5da16782c4e1fa  node-v8.15.1-linux-armv7l.tar.xz
 6d122196856e633a645a07da25ada68ae8a841b8cdb962a69f6e9ec6110ee1bb  node-v8.15.1-linux-ppc64le.tar.gz
@@ -96,14 +98,13 @@ b046a83c3b4d5d029c929f3a739c2f97917e08547c16a3f9e6695d1f40c36ab4  win-x86/node_p
 bb67de498e64e068110b7c36f657d1bd6b8d956d7821a323946d2af365503a3e  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEzBAEBCAAdFiEE3Y8jOLrnUB491ax4wnN5L32DVF0FAlx32BQACgkQwnN5L32D
-VF1DkQf+IbC4VeU8Bfzd228TfvEysEphJGnTxadLfhAkuBOUSVbPC8lFKgA5tjvZ
-Hiuztu3EmJUWBv18r3mcdEoXgB+Xmyfyj55bbaMIocqBmJ2u2y3bfNcfp3c+kg+x
-3ArZEzqNmD7W5o/XG+xsAgRWYAt558ZcgfGkQmSrROW1HR1GOTfiFSTHpJYaBo8H
-WjRfcWDqxcdsHuRIXdSQa5KsgesvB+d3g35YkqyJ9cGjrSD3s2HTNpO+WuGp/AoV
-vL9hh0OGMWRWpglFWCRMyxz0hApBnX02eU+csgJXyVIOaGWVD/Eww5s17fKYIUgu
-ExhIolhNIhkvRQEOktKSvcStbS7H1g==
-=N76x
+iQEzBAEBCAAdFiEE3Y8jOLrnUB491ax4wnN5L32DVF0FAlx44TkACgkQwnN5L32D
+VF1Apgf/VrQvCUbc5zz7RAlFvZ3GAWyPTkacVuMRaC/8fu1aG7Bz2RcnBjQvRpv2
+J2n4HEZ1waSN4gw6zup0Oxypl2fx9pi48tG2UqG390y6Ace6rv3JIZD19O4y65ZE
+rPWAvvLgNlB1/ctxD3sgkUHhAyA7Mz6eoRIq3DS0Jv49cLnHalelhGlcPNmFYpzK
+yagFEgj8Gy7EJzRMOJLOB5RypBXFt31gIreSy96wJz78Bwf3FJ1RhXRwMLcb8R53
+fDUJihP/cpP+LOTIPH8b4+ojxPwBuePBIpEogDtPYnEEL6DbYk+G8m+fxv0sNAFc
+TzfNSZcE++oahwsV+FxCfQgFWga62g==
+=y2yr
 -----END PGP SIGNATURE-----
-
 ```
