add unofficial builds link to download page (#2216)
Node.js now has an unofficial-builds project that attempts to provide basic Node.js binaries for some platforms that are either not supported or only partially supported by Node.js. These binaries are available for download at https://unofficial-builds.nodejs.org/download/.

1. This PR adds a link to the unofficial-builds binaries to the Node.js download page.
2. The PR was created after discussing the topic at nodejs/unofficial-builds#3

--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -11,6 +11,7 @@
   "by": "من طرف",
   "all-downloads": "تحميل جميع النسخ",
   "nightly": "إصدارات ليلية",
+  "unofficial-builds": "Unofficial Builds",
   "chakracore-nightly": "Node-ChakraCore إصدارات ليلية خاصة بـ",
   "previous": "السابق",
   "next": "التالي",
