--- a/locale/de/site.json
+++ b/locale/de/site.json
@@ -10,6 +10,7 @@
   "by": "von",
   "all-downloads": "Alle Download-Optionen",
   "nightly": "Nightly Builds",
+  "unofficial-builds": "Inoffizielle Builds",
   "previous": "Zurück",
   "next": "Weiter",
   "feeds": [
