--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -11,6 +11,7 @@
   "by": "by",
   "all-downloads": "All download options",
   "nightly": "Nightly builds",
+  "unofficial-builds": "非公式のビルド版",
   "previous": "前",
   "next": "次",
   "feeds": [
