--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -11,6 +11,7 @@
   "all-downloads": "All download options",
   "nightly": "Nightly builds",
   "chakracore-nightly": "Node-ChakraCore Nightly builds",
+  "unofficial-builds": "Unofficial builds",
   "previous": "Previous",
   "next": "Next",
   "feeds": [
