--- a/locale/ko/site.json
+++ b/locale/ko/site.json
@@ -11,6 +11,7 @@
   "all-downloads": "모든 다운로드 보기",
   "nightly": "나이틀리 빌드",
   "chakracore-nightly": "Node-ChakraCore 나이틀리 빌드",
+  "unofficial-builds": "비공식 빌드",
   "previous": "이전",
   "next": "다음",
   "feeds": [
