--- a/locale/zh-tw/site.json
+++ b/locale/zh-tw/site.json
@@ -12,6 +12,7 @@
   "all-downloads": "所有下載選項",
   "nightly": "每日構建",
   "chakracore-nightly": "Node-ChakraCore 每日構建",
+  "unofficial-builds": "非官方構建版",
   "previous": "前一個",
   "next": "下一個",
   "feeds": [
