--- a/locale/ja/site.json
+++ b/locale/ja/site.json
@@ -93,6 +93,10 @@
     "guides": {
       "link": "docs/guides",
       "text": "ガイド"
+    },
+    "dependencies": {
+      "link": "docs/meta/topics/dependencies",
+      "text": "依存関係"
     }
   },
   "getinvolved": {
