Language picker implemented (#2294)
Implemented simple language picker #806, to make better UX on the website
How it looks you can check here:
https://www.loom.com/share/9022dba48c1d42a486df212e4acabbdf

--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -3,6 +3,8 @@
   "author": "Node.js Foundation",
   "url": "https://nodejs.org/ar/",
   "locale": "ar",
+  "language": "العربية",
+  "languageEnglishVersion": "Arabic",
   "rtl": true,
   "scrollToTop": "إنتقل إلى الأعلى",
   "reportNodeIssue": "Node.js أبلغ عن عطل في",
