--- a/locale/ru/site.json
+++ b/locale/ru/site.json
@@ -3,6 +3,8 @@
   "author": "Node.js Foundation",
   "url": "https://nodejs.org/ru/",
   "locale": "ru",
+  "language": "Русский",
+  "languageEnglishVersion": "Russian",
   "scrollToTop": "Вверх",
   "reportNodeIssue": "Проблемы с Node.js",
   "reportWebsiteIssue": "Проблемы с сайтом",
