--- a/locale/fr/site.json
+++ b/locale/fr/site.json
@@ -3,6 +3,8 @@
   "author": "Node.js Foundation",
   "url": "https://nodejs.org/fr/",
   "locale": "fr",
+  "language": "Français",
+  "languageEnglishVersion": "French",
   "scrollToTop": "Faire défiler en haut",
   "reportNodeIssue": "Rapporter un problème Node.js",
   "reportWebsiteIssue": "Rapporter un problème sur le site web",
