--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -4,6 +4,8 @@
   "author": "Node.js 基金会",
   "url": "https://nodejs.org/zh-cn/",
   "locale": "zh-cn",
+  "language": "中文(简体)",
+  "languageEnglishVersion": "Chinese Simplified",
   "scrollToTop": "回到页顶",
   "reportNodeIssue": "报告 Node.js 问题 ",
   "reportWebsiteIssue": "报告网站问题",
