Blog: add notarization change to v12.16.2 post (#3088)

--- a/locale/en/blog/release/v12.16.2.md
+++ b/locale/en/blog/release/v12.16.2.md
@@ -8,6 +8,10 @@ layout: blog-post.hbs
 author: Shelley Vohr
 ---
 
+This release includes macOS package notarization and a change in builder configuration.
+
+The macOS binaries for this release, and future 12.x releases, are now being compiled on macOS 10.15 (Catalina) with Xcode 11 to support package notarization, a requirement for installing .pkg files on macOS 10.15 and later. Previous builds of Node.js 12.x were compiled on macOS 10.11 (El Capitan) with a minimum deployment target of macOS 10.10 (Yosemite). As binaries are still being compiled to support a minimum of macOS 10.10 (Yosemite) we do not anticipate this having a negative impact on Node.js 12.x users with older versions of macOS.
+
 ### Notable Changes
 
 * **doc**:
