Fix Broken Links to CoC and Contributor Guide (#3089)
* updating CoC link

* Updating broken collaborator guide link

--- a/locale/pt-br/site.json
+++ b/locale/pt-br/site.json
@@ -126,7 +126,7 @@
       "text": "Contribua"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "Código de Conduta"
     }
   },
