--- a/locale/tr/site.json
+++ b/locale/tr/site.json
@@ -127,7 +127,7 @@
       "text": "Katkıda bulunmak"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "Davranış Kuralları"
     },
     "node-meetups": {
