--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -126,7 +126,7 @@
       "text": "مساهمة"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "القواعد السلوكية"
     },
     "node-meetups": {
