--- a/locale/ca/site.json
+++ b/locale/ca/site.json
@@ -126,7 +126,7 @@
       "text": "Contribueix"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "Codi de Conducta"
     }
   },
