--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -127,7 +127,7 @@
       "text": "Contribute"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "Code of Conduct"
     },
     "node-meetups": {
