--- a/locale/es/site.json
+++ b/locale/es/site.json
@@ -127,7 +127,7 @@
       "text": "Contribuye"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "Código de Conducta"
     }
   },
