--- a/locale/fa/site.json
+++ b/locale/fa/site.json
@@ -127,7 +127,7 @@
       "text": "مشارکت"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "شیوه تعامل برای مشارکت"
     }
   },
