--- a/locale/ko/site.json
+++ b/locale/ko/site.json
@@ -127,7 +127,7 @@
       "text": "기여하기"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "행동강령"
     },
     "node-meetups": {
