--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -128,7 +128,7 @@
       "text": "贡献"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "管理"
     },
     "node-meetups": {
