--- a/locale/zh-tw/site.json
+++ b/locale/zh-tw/site.json
@@ -118,7 +118,7 @@
       "text": "貢獻"
     },
     "conduct": {
-      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/coc.md#code-of-conduct",
+      "link": "https://github.com/nodejs/node/blob/master/doc/guides/contributing/code-of-conduct.md",
       "text": "管理"
     },
     "node-meetups": {
