--- a/locale/en/blog/release/v14.2.0.md
+++ b/locale/en/blog/release/v14.2.0.md
@@ -178,10 +178,9 @@ Linux 64-bit Binary: https://nodejs.org/dist/v14.2.0/node-v14.2.0-linux-x64.tar.
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v14.2.0/node-v14.2.0-linux-ppc64le.tar.xz<br>
 Linux s390x 64-bit Binary: https://nodejs.org/dist/v14.2.0/node-v14.2.0-linux-s390x.tar.xz<br>
 AIX 64-bit Binary: https://nodejs.org/dist/v14.2.0/node-v14.2.0-aix-ppc64.tar.gz<br>
-SmartOS 64-bit Binary: *Coming soon*<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v14.2.0/node-v14.2.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v14.2.0/node-v14.2.0-linux-arm64.tar.xz<br>
-Source Code: *Coming soon*<br>
+Source Code: https://nodejs.org/dist/v14.2.0/node-v14.2.0.tar.gz<br>
 Other release files: https://nodejs.org/dist/v14.2.0/<br>
 Documentation: https://nodejs.org/docs/v14.2.0/api/
 
