fix(i18n): Romanian site.json basics
Problems from the Crowdin setup copying English files into the repo when they aren't translated.
Text taken from Electronjs.org language switcher

Fixes #3251

--- a/locale/ro/site.json
+++ b/locale/ro/site.json
@@ -1,10 +1,10 @@
 {
   "title": "Node.js",
   "author": "Node.js",
-  "url": "https://nodejs.org/en/",
-  "locale": "en",
-  "language": "English",
-  "languageEnglishVersion": "English",
+  "url": "https://nodejs.org/ro/",
+  "locale": "ro",
+  "language": "limba română",
+  "languageEnglishVersion": "Romanian",
   "scrollToTop": "Scroll to top",
   "reportNodeIssue": "Report Node.js issue",
   "reportWebsiteIssue": "Report website issue",
