en: Add a Node.js certification page (#3190)
A few folks noted that there are no links to the Node.js certification programs on the site. I'm opening this PR to begin a discussion as to whether having a new menu item is a good way to raise awareness about the certifications.

The content of the page is effectively identical to that of openjsf.org/certification, with a few style and language tweaks.

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -138,6 +138,10 @@
     "link": "security",
     "text": "Security"
   },
+  "getcertified": {
+    "link": "https://openjsf.org/certification",
+    "text": "Certification"
+  },
   "blog": {
     "link": "blog",
     "text": "News"
