zh-cn, zh-TW: Add the new menu item for "Certification"
Ref: https://github.com/nodejs/nodejs.org/pull/3190

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -139,6 +139,10 @@
     "link": "security",
     "text": "安全"
   },
+  "getcertified": {
+    "link": "https://openjsf.org/certification",
+    "text": "相关认证"
+  },
   "blog": {
     "link": "blog",
     "text": "新闻"
