AR: Add "Certification" to menu
Signed-off-by: Aissaoui Ahmed <algarabi05@gmail.com>

--- a/locale/ar/site.json
+++ b/locale/ar/site.json
@@ -137,6 +137,10 @@
     "link": "security",
     "text": "أمن"
   },
+  "getcertified": {
+    "link": "https://openjsf.org/certification",
+    "text": "شهادة"
+  },
   "blog": {
     "link": "blog",
     "text": "المدونة"
