fix: Missing 14.15.5 Windows 64 install link (#3674)

--- a/locale/en/blog/release/v14.15.5.md
+++ b/locale/en/blog/release/v14.15.5.md
@@ -29,7 +29,7 @@ author: Bethany Nicolle Griggs
 * [[`2f7944b18b`](https://github.com/nodejs/node/commit/2f7944b18b)] - **util**: fix module prefixes during inspection (Ruben Bridgewater) [#36178](https://github.com/nodejs/node/pull/36178)
 
 Windows 32-bit Installer: https://nodejs.org/dist/v14.15.5/node-v14.15.5-x86.msi<br>
-Windows 64-bit Installer: *Coming soon*<br>
+Windows 64-bit Installer: https://nodejs.org/dist/v14.15.5/node-v14.15.5-x64.msi<br>
 Windows 32-bit Binary: https://nodejs.org/dist/v14.15.5/win-x86/node.exe<br>
 Windows 64-bit Binary: https://nodejs.org/dist/v14.15.5/win-x64/node.exe<br>
 macOS 64-bit Installer: https://nodejs.org/dist/v14.15.5/node-v14.15.5.pkg<br>
