--- a/locale/en/blog/release/v15.14.0.md
+++ b/locale/en/blog/release/v15.14.0.md
@@ -78,7 +78,7 @@ Other Notable Changes:
 * [[`570fbcef93`](https://github.com/nodejs/node/commit/570fbcef93)] - **url**: forbid pipe in URL host (Darshan Sen) [#37877](https://github.com/nodejs/node/pull/37877)
 
 Windows 32-bit Installer: https://nodejs.org/dist/v15.14.0/node-v15.14.0-x86.msi<br>
-Windows 64-bit Installer: *Coming soon*<br>
+Windows 64-bit Installer: https://nodejs.org/dist/v15.14.0/node-v15.14.0-x64.msi<br>
 Windows 32-bit Binary: https://nodejs.org/dist/v15.14.0/win-x86/node.exe<br>
 Windows 64-bit Binary: https://nodejs.org/dist/v15.14.0/win-x64/node.exe<br>
 macOS 64-bit Installer: https://nodejs.org/dist/v15.14.0/node-v15.14.0.pkg<br>
@@ -89,7 +89,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v15.14.0/node-v15.14.0-linux-
 AIX 64-bit Binary: https://nodejs.org/dist/v15.14.0/node-v15.14.0-aix-ppc64.tar.gz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v15.14.0/node-v15.14.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v15.14.0/node-v15.14.0-linux-arm64.tar.xz<br>
-Source Code: *Coming soon*<br>
+Source Code: https://nodejs.org/dist/v15.14.0/node-v15.14.0.tar.gz<br>
 Other release files: https://nodejs.org/dist/v15.14.0/<br>
 Documentation: https://nodejs.org/docs/v15.14.0/api/
 
