refactor: moving banner to ext json file (#3965)
* refactor: moving banner to ext json file

* lint: fixing lint errors

* refactor: moving banner to local/en/site.json

* refactor: using provided i18nJSON func

* refactor: rm banner from build and using directly in layout

* refactor: moving blm to site.json

* refactor: rm duplicate url beginning in site.json

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -157,5 +157,15 @@
     "pages": {
       "changelog": "Changelog"
     }
+  },
+  "banner": {
+    "visible": true,
+    "text": "New security releases now available for 16.x, 14.x, and 12.x release lines",
+    "link": "blog/vulnerability/july-2021-security-releases/"
+  },
+  "blacklivesmatter": {
+    "visible": false,
+    "text": "#BlackLivesMatter",
+    "link": "black-lives-matter/"
   }
 }
