--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -158,14 +158,16 @@
       "changelog": "Changelog"
     }
   },
-  "banner": {
-    "visible": true,
-    "text": "New security releases now available for 16.x, 14.x, and 12.x release lines",
-    "link": "blog/vulnerability/july-2021-security-releases/"
-  },
-  "blacklivesmatter": {
-    "visible": false,
-    "text": "#BlackLivesMatter",
-    "link": "black-lives-matter/"
+  "banners": {
+    "index": {
+      "visible": true,
+      "text": "New security releases now available for 16.x, 14.x, and 12.x release lines",
+      "link": "blog/vulnerability/july-2021-security-releases/"
+    },
+    "blacklivesmatter": {
+      "visible": false,
+      "text": "#BlackLivesMatter",
+      "link": "black-lives-matter/"
+    }
   }
 }
