--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -160,7 +160,8 @@
   },
   "banners": {
     "index": {
-      "visible": true,
+      "startDate": "2021-07-01T16:00:00.000Z",
+      "endDate": "2021-07-30T16:00:00.000Z",
       "text": "New security releases now available for 16.x, 14.x, and 12.x release lines",
       "link": "blog/vulnerability/july-2021-security-releases/"
     },
