improve: add "EditOnGitHub" on every necessary page (#3971)
For the previous version of "Edit on GitHub", we find there're some pages (such as "Download","Index"...ect), it doesn't have this link, because the original code depends on the <h1> generated from "#" in the markable file, but "Download" and "Index" without any "#", so we cannot generate these links.

Now the solution is we've generated URL at githubLink.js, with a hiddenfield generated for each body content, and then we read it out by main.js with which we can fulfill the "Edit On GitHub" link with the correct URL.

Besides, we've also some other changes:

1. Move "Edit On GitHub" onto the footer.
2. Add "EditOnGithub" instead of hard coding for 'en' site pages.
3. Use 'spe' instead of hard coding for character '/' at 'scripts/plugins/githubLinks.js'.
4. Add "{{{contents}}}" for "Download" and "Download Current", because gitHubLinks.js will save and return the content, we need to show it outside by appending the hidden field.

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -1,5 +1,6 @@
 {
   "title": "Node.js",
+  "editOnGithub":"Edit On GitHub",
   "author": "Node.js",
   "url": "https://nodejs.org/en/",
   "locale": "en",
