--- a/locale/en/blog/release/v16.6.0.md
+++ b/locale/en/blog/release/v16.6.0.md
@@ -14,7 +14,7 @@ author: Bethany Nicolle Griggs
 
 The V8 engine is updated to version 9.2.230.21.
 
-It notably introduces the new [`Array.prototype.at`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/at) method:
+It notably introduces the new [`Array.prototype.at`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/at) method (also on [Typed Arrays](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/TypedArray/at) and [strings](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/at)):
 
 ```js
 const array = [1, 2, 3];
