--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -161,10 +161,10 @@
   },
   "banners": {
     "index": {
-      "startDate": "2021-07-28T16:00:00.000Z",
-      "endDate": "2021-08-13T16:00:00.000Z",
-      "text": "New security releases now available for 16.x, 14.x, and 12.x release lines",
-      "link": "blog/vulnerability/july-2021-security-releases-2/"
+      "startDate": "2021-08-05T13:00:00.000Z",
+      "endDate": "2021-08-25T13:00:00.000Z",
+      "text": "New security releases to be made available August 11th, 2021",
+      "link": "blog/vulnerability/aug-2021-security-releases/"
     },
     "blacklivesmatter": {
       "visible": false,
