zh-CN: update new security release announcement (#4025)
Ref: https://github.com/nodejs/nodejs.org/pull/4024/files

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -161,7 +161,7 @@
   },
   "banners": {
     "index": {
-      "text": "对 16.x, 14.x, and 12.x 版本的最新安全修复可下载"
+      "text": "新安全补丁将于 2021 年 8 月 11 日发布"
     }
   }
 }
