zh-CN: update new security release announcement (#4026)
Ref: https://github.com/nodejs/nodejs.org/pull/4024/files, make it more clear to understand by the Chinese.

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -161,7 +161,7 @@
   },
   "banners": {
     "index": {
-      "text": "新安全补丁将于 2021 年 8 月 11 日发布"
+      "text": "新安全补丁发布预告（于 2021 年 8 月 11 日发布）"
     }
   }
 }
