zh-CN: update site.json about the release announcement (#4041)
update site.json about the release announcement.
Ref: https://github.com/nodejs/nodejs.org/pull/4039

--- a/locale/zh-cn/site.json
+++ b/locale/zh-cn/site.json
@@ -161,7 +161,7 @@
   },
   "banners": {
     "index": {
-      "text": "新安全补丁发布预告（于 2021 年 8 月 11 日发布）"
+      "text": "对 16.x，14.x 和 12.x 的安全更新版本已发布"
     }
   }
 }
